add hugo pipes, postcss, and purgecss

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -20,7 +20,8 @@
 	<meta name="MobileOptimized" content="375">
 	<meta name="viewport" content="width=device-width,minimum-scale=1">
 	{{ hugo.Generator }}
-	<link rel="stylesheet" href="{{ .Site.BaseURL }}style.css">
+	{{ $style := resources.Get "sass/style.scss" | toCSS | postCSS | minify | fingerprint }} 
+	<link rel="stylesheet" href="{{ $style.Permalink }}">
 	<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:800&display=optional">
 	{{ block "favicon" . }}
