--- a/layouts/partials/site-favicon.html
+++ b/layouts/partials/site-favicon.html
@@ -3,6 +3,6 @@
 <link rel="icon" type="image/png" sizes="96x96" href="{{ "favicon-96x96.png" | absURL }}">
 <link rel="apple-touch-icon" sizes="180x180" href="{{ "apple-touch-icon.png" | absURL }}">
 <link rel="manifest" href="{{ "site.webmanifest" | absURL }}">
-<link rel="mask-icon" href="{{ "safari-pinned-tab.svg" | absURL }}" color="#ff1561">
-<meta name="msapplication-TileColor" content="#ff1561">
-<meta name="theme-color" content="#ff1561">
+<link rel="mask-icon" href="{{ "safari-pinned-tab.svg" | absURL }}" color="#BD66FF">
+<meta name="msapplication-TileColor" content="#BD66FF">
+<meta name="theme-color" content="#BD66FF">
