--- a/layouts/partials/marquee.html
+++ b/layouts/partials/marquee.html
@@ -22,7 +22,7 @@
     {{ partial "breadcrumb" . }}
   {{ end }}
   <div class="flex align-center">
-    <a class="button" href="/subscribe" title="Subscribe to the Blog">Subscribe</a>
+    <a class="button" href="/subscribe" title="Subscribe to the Blog">Subscribe Free</a>
 
     <div id="day-or-night" class="color-scheme">
       <button id="day-mode" title="Day Mode">
