--- a/layouts/partials/seo-schema.html
+++ b/layouts/partials/seo-schema.html
@@ -21,6 +21,6 @@
     "dateModified" : "{{ .Date }}",
     "url" : "{{ .Permalink }}",
     "wordCount" : "{{ .WordCount }}",
-    "keywords" : [ {{ if isset .Params "tags" }}{{ range .Params.tags }}"{{ . }}",{{ end }}{{ end }}"Social Justice","Gender Identity","Sexual Orientation" ]
+    "keywords" : [ {{ if isset .Params "tags" }}{{ range .Params.tags }}"{{ . }}",{{ end }}{{ end }}"Sam Killermann", "Sam Killerman", "Sam Killermann Blog", "Social Justice","Gender","Sexuality" ]
 }
 </script>
