--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -1,5 +1,5 @@
 <footer id="colophon" class="chameleon-bg site-footer">
-	<section id="footer-sK" class="hero chameleon-border">
+	<section id="footer-sK" class="pad hero chameleon-border">
 		<div class="grid grid--full grid--center medium-grid--fit">
 			<div class="hero--text grid-cell">
 				<h2><span class="chameleon-color">Hi there!</span> I’m sK and I love making things.</h2>
@@ -19,19 +19,19 @@
 		</div>
 
 		<div class="button-group grid grid--full medium-grid--fit">
-			<div class="grid-cell bigpad">
+			<div class="grid-cell pad">
 				<a href="https://www.patreon.com/join/killermann/" title="Be My Patron" class="button" onClick="ga('send', 'event', { eventCategory: 'Support', eventAction: 'button_click', eventLabel: 'Be My Patron'});">
 					Be My Patron
 				</a>
 				<div class="description">I'm employed by a fine group of the best people in the world ever <a href="https://patreon.com/join/killermann" target="_blank" rel="noopener noreferrer" rel="noopener noreferrer"  onClick="ga('send', 'event', { eventCategory: 'Support', eventAction: 'button_click', eventLabel: 'On Patreon'});">on Patreon</a> i love them srsly wanna be one?</div>
 			</div>
-			<div class="grid-cell bigpad">
+			<div class="grid-cell pad">
 				<a href="https://samuelkillermann.com" title="Samuel Killermann Curriculum Vitae" class="button">
 					View my Work
 				</a>
 				<div class="description">View <a href="https://samuelkillermann.com" target="_blank" rel="noopener noreferrer">online Curriculum Vitae</a> and see if I'm qualified for your patronage (or just to get a sense of where I'm coming from).</div>
 			</div>
-			<div class="grid-cell bigpad">
+			<div class="grid-cell pad">
 				<a href="/books/" title="Buy Merch" class="button" onClick="ga('send', 'event', { eventCategory: 'Support', eventAction: 'button_click', eventLabel: 'Buy Books'});">
 					Buy my Books
 				</a>
