--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -2,14 +2,6 @@
 	display: block;
 }
 
-.excerpt {
-	font-family:$serif;
-	font-weight: 500;
-	margin-bottom:2rem;
-	line-height: 1.44;
-	font-size: 1.33em;
-}
-
 .main {
 	padding-bottom: calc(1.5rem + 4vw);
 }
@@ -99,9 +91,8 @@
 .post-thumbnail {
 	border:none;
 	display:block;
-	border-radius:5px;
 	overflow: hidden;
-	margin:0 auto 1.5rem;
+	margin:0 -4vw 1.5rem;
 
 	img {
 		width:100%;
@@ -109,15 +100,6 @@
 		display:block;
 		transition: transform ease-out .3s;
 	}
-}
-
-.lazy-load {
-    transition: opacity .15s;
-    opacity: 0;
-}
-
-.lazy-load.is-loaded {
-    opacity: 1;
 }
 
 .page-links {
@@ -272,21 +254,29 @@
 	margin-bottom:1.5rem;
 }
 	.entry-title, .page-title {
-		margin: 2rem auto;
+		margin: 2rem auto calc(1rem + 2vw);
 		font-size: calc(2em + 1.8vw);
 	}
 
-	.primary-category, .byline, .posted-on, .more-link{
+	.excerpt {
+		font-family:$serif;
+		font-weight: 500;
+		margin-bottom:calc(1rem + 2vw);
+		line-height: 1.44;
+		font-size: 1.33em;
+	}
+
+	.byline {
+		margin-bottom: calc(1rem + 2vw);
+	}
+
+	.primary-category, .byline {
 		font-weight:900;
 		font-size:12px;
 		letter-spacing: 0.08em;
 		font-family: $font__theme;
 		text-transform:uppercase;
 		line-height:1.44;
-	}
-
-	.more-link {
-		font-family:$sans-serif;
 	}
 
 /* purgecss ignore */
@@ -357,11 +347,6 @@
 				padding-right: 4vw;
 			}
 		}
-	}
-
-	.post-thumbnail {
-		margin-left: -2vw;
-		margin-right: -2vw;
 	}
 
 	.post-thumbnail:hover img, .post-thumbnail:focus img {
@@ -861,6 +846,7 @@ MEDIA QUERIES
 		.post-thumbnail {
 			margin-left: auto;
 			margin-right: auto;
+			border-radius:5px;
 		}
 	}
 
@@ -890,6 +876,4 @@ MEDIA QUERIES
 /* Supa-large */
 
 @media (min-width: 1400px) {
-	
-
 }
