--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -3,7 +3,7 @@
 
 <article class="text-wrap format-page">
 	<header class="entry-header">
-		<h1 class="page-title">{{ .Title }}</h1>
+		<h1 class="page-title chameleon-color">{{ .Title }}</h1>
 	</header><!-- .entry-header -->
 	{{ if .Params.featured_image }}
 	<div class="post-thumbnail chameleon-bg">
