--- a/layouts/partials/site-footer.html
+++ b/layouts/partials/site-footer.html
@@ -40,7 +40,7 @@
 		</div>
 	</section>
 	<section id="site-navigation" class="navis">
-		<a href="#masthead" class="button" title="Back to Top">Back to Top &uarr;</a>
+		<a href="#masthead" class="button" title="Back to Top">&nbsp; &uarr; &nbsp;</a>
 		<nav id="footer--nav" class="sK-nav">
 			<a href="/about" title="About" rel="navigation" onClick="gtag('event', 'About - Footer');">
 				<svg class="spin-hover"><use xlink:href="#icon-pencil-alt"></svg>
