--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -71,7 +71,7 @@
 		<div id="primary" class="content-area">
 			{{ partial "marquee" . }}
 			<span id="main" tabindex="-1"></span>
-			<main class="main pad" role="main">
+			<main class="main" role="main">
 				{{ block "main" . }}{{ end }}
 			</main>
 		</div>
