--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,11 +1,13 @@
 {{ define "main" }}
 <style type="text/css">
-
+.home-intro {
+	font-size: 1.4em;
+	line-height: 1.444;
+}
 </style>
-
-<article>
-	{{ .Content }}
-</article>
+<header class="archive-header">
+	<h1 class="home-intro wrap" style="text-align: center; padding: 0 4vw; margin: 1em auto 0;">Welcome! <a href="/about/sam-killermann">I'm sK.</a> I blog about <a href="/categories/better-humaning">better humaning</a>, <a href="/categories/technolophizing">technolophizing</a> &amp; <a href="/categories/adventravel">adventravel</a>, exploring themes like <a href="/tags/unhappiness">(un)happiness</a>, <a href="/tags/fear">fear</a>, <a href="/tags/activism">activism</a>, <a href="/tags/mindfulness">mindfulness</a>, &amp; <a href="/tags/" title="All Tags">more</a>. I'm happy you're here.</h1>
+</header>
 <section class="section-main">
 	<div class="loop">
 		{{ range first 10 (where site.Pages "Type" "post" ) }}
