--- a/layouts/partials/pagination.html
+++ b/layouts/partials/pagination.html
@@ -1,6 +1,6 @@
 {{- $paginator := .Paginator }}
 <!-- Number of links either side of the current page. -->
-{{ $adjacent_links := 1 }}
+{{ $adjacent_links := 0 }}
 <!-- $max_links = ($adjacent_links * 2) + 1 -->
 {{ $max_links := (add (mul $adjacent_links 2) 1) }}
 <!-- $lower_limit = $adjacent_links + 1 -->
@@ -10,22 +10,16 @@
 <!-- If there's more than one page. -->
 {{ if gt $paginator.TotalPages 1 }}
 
-  <ul class="pagination">
-    <!-- First page. -->
-    {{- if ne $paginator.PageNumber 1 }}
-    <li class="page-link page-link--first">
-      <a title="First Page" class="pagination__link pagination__link--first" href="{{ $paginator.First.URL }}">
-        &larrb;
-      </a>
-    </li>
-    {{ end -}}
+  <nav class="pagination">
     <!-- Previous page. -->
     {{- if $paginator.HasPrev }}
-    <li class="page-link page-link--previous">
-      <a title="Previous Page" href="{{ $paginator.Prev.URL }}" class="pagination__link pagination__link--previous">
-        &#8672;
-      </a>
-    </li>
+    <a title="Previous Page" href="{{ $paginator.Prev.URL }}" class="pagination-link button previous">
+      <big class="icon">&#10140;</big>
+    </a>
+    {{ else }}
+    <span aria-hidden="true" class="disabled pagination-link button previous">
+      <big class="icon">&#10140;</big>
+    </span>
     {{ end -}}
     <!-- Page numbers. -->
     {{- range $paginator.Pagers }}
@@ -59,20 +53,23 @@
       {{ end }}
       <!-- Output page numbers. -->
       {{ if eq ($.Scratch.Get "page_number_flag") true }}
-        <li class="page-link{{ if eq . $paginator }} page-link--current{{ end }}">
-          <a href="{{ .URL }}" class="pagination__link">
-            {{ .PageNumber }}
-          </a>
-        </li>
+      <div class="page-number">
+        <span class="current-page-number">
+          {{ .PageNumber }}
+        </span>
+        of {{ $paginator.TotalPages }}
+      </div>
       {{ end }}
     {{ end }}
     <!-- Next page. -->
     {{ if $paginator.HasNext }}
-    <li class="page-link page-link--next">
-      <a title="Next Page" href="{{ $paginator.Next.URL }}" class="pagination__link pagination__link--next">
-        &#8674;
-      </a>
-    </li>
+    <a title="Next Page" href="{{ $paginator.Next.URL }}" class="pagination-link button next">
+      <big class="icon">&#10140;</big>
+    </a>
+    {{ else }}
+    <span aria-hidden="true" class="disabled pagination-link button next">
+      <big class="icon">&#10140;</big>
+    </span>
     {{ end }}
-  </ul><!-- .pagination -->  
+  </nav><!-- .pagination -->  
 {{ end }}
