--- a/assets/sass/mixins/_toolbox.scss
+++ b/assets/sass/mixins/_toolbox.scss
@@ -7,6 +7,12 @@
 	background-color:var(--bg-mask);
 }
 
+.disabled {
+	filter: grayscale(1);
+	cursor: not-allowed;
+	opacity: .5;
+}
+
 .dont-render-dawg {
 	position: absolute;
 	height: 0;
