--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -15,7 +15,7 @@
 		<h2>
 			<a title="All {{ $key | humanize }} posts" href="{{ "/" | relLangURL }}{{ $.Data.Plural | urlize }}/{{ $key | urlize }}">
 				{{ $key | humanize | upper }}
-			</a>
+			</a> ({{ .Count }})
 		</h2>
 		<ul class="first-three">
 			{{ range first 3 ($value.Pages) }}
