--- a/layouts/_default/terms.html
+++ b/layouts/_default/terms.html
@@ -1,35 +1,57 @@
 {{ define "main" }}
 {{ $data := .Data }}
+<style type="text/css">
+.tax {
+	margin-bottom: 4vw;
+	background: var(--bg-faint);
+	border-radius: 20px;
+	position: relative;
+	overflow: hidden;
+}
+
+.absolute-link {
+	opacity: 0;
+}
+
+.tax h2 {
+	margin-bottom: 20px;
+}
+
+.absolute-link:hover {
+	opacity: .4;
+}
+
+.first-three {
+	margin-bottom: 0;
+}
+</style>
 <header class="page-header">
-	<h1 class="page-title tc">
-		Browse by {{ .Title | default .Site.Title }}
+	<h1 class="page-title chameleon-color pad tc text-wrap">
+		Popular {{ .Title | default .Site.Title }}
 	</h1>
 	{{- with .Params.subtitle }}<h2 class="tc text-c-700 em1 mt0 page-subtitle">{{ . | lower }}</h2>{{ end -}}
 	<div class="section-intro">
 		{{- .Content -}}
 	</div>
 </header>
-<section class="masonry ease-opacity-in">
+<section class="loop pad">
 	{{ range $key, $value := .Data.Terms }}
-	<div class="brick tax">
-		<h2>
-			<a title="All {{ $key | humanize }} posts" href="{{ "/" | relLangURL }}{{ $.Data.Plural | urlize }}/{{ $key | urlize }}">
-				{{ $key | humanize | upper }}
-			</a> ({{ .Count }})
-		</h2>
-		<ul class="first-three">
-			{{ range first 3 ($value.Pages) }}
-			<li>
-				<a href="{{ .RelPermalink }}" title="{{ .Title }}">
-					{{- .Title -}}
-				</a>
-			</li>
-			{{ end }}
-		</ul>
-		<a title="All {{ $key | humanize }} posts" href="{{ "/" | relLangURL }}{{ $.Data.Plural | urlize }}/{{ $key | urlize }}">
-			View all &rarr;
-		</a>
-	</div>
+		{{ if gt .Count 3 }}
+		<article class="tax text-wrap pad">
+			<h2>
+					<span>{{ $key | humanize | title }}</span> <span>&rarr;</span>
+			</h2>
+			<p><strong>{{ .Count }} posts</strong>, including...</p>
+			<ul class="first-three">
+				{{ range first 3 ($value.Pages) }}
+				<li>
+						{{- .Title -}}
+				</li>
+				{{ end }}
+			</ul>
+			<a title="All {{ $key | humanize }} posts" href="{{ "/" | relLangURL }}{{ $.Data.Plural | urlize }}/{{ $key | urlize }}" class="absolute-link chameleon-bg"></a>
+		</article>
+		{{ end }}
 	{{ end }}
 </section><!--/section-main-->
 {{ end }}
