--- a/layouts/sections/single.html
+++ b/layouts/sections/single.html
@@ -1,27 +1,36 @@
 {{ define "main" }}
+<style type="text/css">
+.sections-list .archive-header {
+  margin-top: 1.5rem;
+  border-radius: 20px;
+}
+</style>
+<section class="sections-list pad">
+  <article class="archive-header wrap better-humaning">
+    <h1 class="page-title">Better Humaning</h1>
+    <div class="archive-description wrap entry-content">
+      <p>What's at the root of <a href="/category/better-humaning/happiness">(un)happiness</a>? How can you <a href="/building-daily-meditation-habit/">start and maintain a daily meditation practice</a>? Where might <a href="/tag/minimalism">minimalism</a> fit in? And what about <a href="/tag/politics">politics</a>? <em>Better Humaning</em> is where I write about all that and more.</p>
+    </div>
+    <hr/>
+    <a class="absolute-link" href="{{ .Site.BaseURL }}categories/better-humaning#latest-posts" rel="navigation" title="Better Humaning by Sam Killermann"></a>
+  </article>
+  <article class="archive-header wrap technolophizing">
+    <h1 class="page-title">Technolophizing</h1>
+    <div class="archive-description wrap entry-content">
+      <p>Because most of my work is online (<a href="/category/technolophizing/work-dot-com">work dot com</a>), I'm always learning and processing all things technology and social/digital media. <strong><em>Technolophizing</em></strong> is where I write about my struggles and successes overcoming the <a href="/numbers-rule-my-life/">numbers that rule my life</a>, being smarter than my phone, and  using technology to improve (not overwhelm) your life and work.</p>
+    </div>
+    <hr/>
+    <a class="absolute-link" href="{{ .Site.BaseURL }}categories/technolophizing#latest-posts" rel="navigation" title="Technolophizing by Sam Killermann"></a>
+  </article>
+  <article class="archive-header wrap adventravel">
+    <h1 class="page-title">Adventravel</h1>
+    <div class="archive-description wrap entry-content">
+      <p>Traveling, and specifically immersing myself into other cultures, is one of my most treasured experiences. It's so easy to overlook everything you take for granted until you're living out of your backpack in a country where you're learning the language on the fly. These are my stories from such experiences, adventure + travel.</p>
+    </div>
+    <hr/>
+    <a class="absolute-link" href="{{ .Site.BaseURL }}categories/adventravel#latest-posts" rel="navigation" title="Adventravel by Sam Killermann"></a>
+  </article>
 
-<article class="archive-header wrap better-humaning">
-  <h1 class="page-title">Better Humaning</h1>
-  <div class="archive-description wrap entry-content">
-    <p>What's at the root of <a href="/category/better-humaning/happiness">(un)happiness</a>? How can you <a href="/building-daily-meditation-habit/">start and maintain a daily meditation practice</a>? Where might <a href="/tag/minimalism">minimalism</a> fit in? And what about <a href="/tag/politics">politics</a>? <em>Better Humaning</em> is where I write about all that and more.</p>
-  </div>
-  <hr/>
-  <a class="absolute-link" href="{{ .Site.BaseURL }}categories/better-humaning#latest-posts" rel="navigation" title="Better Humaning by Sam Killermann"></a>
-</article><!-- .page-header -->
-<article class="archive-header wrap technolophizing">
-  <h1 class="page-title">Technolophizing</h1>
-  <div class="archive-description wrap entry-content">
-    <p>Because most of my work is online (<a href="/category/technolophizing/work-dot-com">work dot com</a>), I'm always learning and processing all things technology and social/digital media. <strong><em>Technolophizing</em></strong> is where I write about my struggles and successes overcoming the <a href="/numbers-rule-my-life/">numbers that rule my life</a>, being smarter than my phone, and  using technology to improve (not overwhelm) your life and work.</p>
-  </div>
-  <hr/>
-  <a class="absolute-link" href="{{ .Site.BaseURL }}categories/technolophizing#latest-posts" rel="navigation" title="Technolophizing by Sam Killermann"></a>
-</article><!-- .page-header -->
-<article class="archive-header wrap adventravel">
-  <h1 class="page-title">Adventravel</h1>
-  <div class="archive-description wrap entry-content">
-    <p>Traveling, and specifically immersing myself into other cultures, is one of my most treasured experiences. It's so easy to overlook everything you take for granted until you're living out of your backpack in a country where you're learning the language on the fly. These are my stories from such experiences, adventure + travel.</p>
-  </div>
-  <hr/>
-  <a class="absolute-link" href="{{ .Site.BaseURL }}categories/adventravel#latest-posts" rel="navigation" title="Adventravel by Sam Killermann"></a>
-</article><!-- .page-header -->
+</section>
+
 {{ end }}
