--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -52,10 +52,10 @@
 	border-style:solid;
 	border-width:3px;
 	border-radius:3px;
-	border-left:none;
+	border-right:none;
 	border-bottom:none;
 	margin:4vw auto;
-	padding:25px 25px 5px 0;
+	padding:25px 0 5px 25px;
 	font-size:1em;
 
 	h3 {
@@ -125,7 +125,7 @@
 .loop {
 	
 	padding: 0 4vw;
-	
+
 	.loop-content {
 		position:relative;
 		padding:6vw 0vw;
@@ -163,7 +163,7 @@
 			margin-bottom: 1rem;
 		}
 
-		.format-standard {
+		.format-standard, .format-image{
 			border-radius:25px;
 			background: var(--bg-faint);
 			overflow:hidden;
@@ -279,7 +279,7 @@
 
 /* purgecss ignore */
 
-.format-standard, .format-page {
+.format-standard, .format-page, .format-image {
 
 	.entry-content {
 		
@@ -823,10 +823,11 @@ MEDIA QUERIES
 /* Small screens */
 @media (min-width: 481px) {
 	.in-text--mailing-list  {
-		float:left;
+		float:right;
+		display: inline-block;
 		max-width:220px;
-		margin:2vw 4vw 4vw -2vw;
-		margin-left:calc(25% - 25vw);
+		margin:2vw -2vw 4vw 4vw;
+		margin-right:calc(50% - 46vw);
 	}
 
 	#footer-feedburner {
