style quotes, change body text color, and make tons of other small tweaks

--- a/assets/sass/mixins/_toolbox.scss
+++ b/assets/sass/mixins/_toolbox.scss
@@ -75,6 +75,12 @@
 	}
 }
 
+.svg-inline--fa {
+	display: inline-block;
+	height: 1em;
+	width: auto;
+}
+
 .faqs {
 	h3, p {
 		border-color:$color__primary;
