--- a/layouts/partials/card.html
+++ b/layouts/partials/card.html
@@ -1,13 +1,21 @@
 <div class="loop-content">
-	<article class="wrap {{ if .Params.format }}format-{{ .Params.format }}{{ else }}format-standard{{ end }}">
-		<header class="entry-header">
+	<article class="wrap card {{ if .Params.format }}format-{{ .Params.format }}{{ else }}format-standard{{ end }}">
+		<div class="entry-header">
 			<div class="entry-header-text">
 				{{- if .Params.categories }}
 				<div class="primary-category">
+					{{ with .Params.format }}{{ . }} | {{ end }}
 					{{ index .Params.categories 0 }}
 				</div>
 				{{ end -}}
-				<h3 class="entry-title">{{ .Title }}</h3>
+				{{ if eq .Params.format "quote" }}
+				{{ .Content }}
+				{{ else }}
+				<h3 class="entry-title">
+					{{ .Title }}
+					{{ with .Params.link }} <svg aria-hidden="true" focusable="false" class="svg-inline--fa" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M497.6,0,334.4.17A14.4,14.4,0,0,0,320,14.57V47.88a14.4,14.4,0,0,0,14.69,14.4l73.63-2.72,2.06,2.06L131.52,340.49a12,12,0,0,0,0,17l23,23a12,12,0,0,0,17,0L450.38,101.62l2.06,2.06-2.72,73.63A14.4,14.4,0,0,0,464.12,192h33.31a14.4,14.4,0,0,0,14.4-14.4L512,14.4A14.4,14.4,0,0,0,497.6,0ZM432,288H416a16,16,0,0,0-16,16V458a6,6,0,0,1-6,6H54a6,6,0,0,1-6-6V118a6,6,0,0,1,6-6H208a16,16,0,0,0,16-16V80a16,16,0,0,0-16-16H48A48,48,0,0,0,0,112V464a48,48,0,0,0,48,48H400a48,48,0,0,0,48-48V304A16,16,0,0,0,432,288Z"></path></svg>{{ end -}}
+				</h3>
+				{{ end }}
 				{{ if .Params.excerpt }}
 				<p class="excerpt">{{ .Params.excerpt }}</p>
 				{{ end }}
@@ -17,10 +25,12 @@
 				<img loading="lazy" class="lazy-load" src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-src="{{ .Params.featured_image }}" alt="" />
 			</div>
 			{{ end }}
-
-			<a class="absolute-link" rel="hidden" href="{{ .Permalink }}"><span class="screen-reader-text">{{ .Title }}</span></a>
-
-		</header><!-- .entry-header -->
+			{{ if .Params.link }}
+			<a class="absolute-link" rel="noopener noreferrer" target="_blank" href="{{ .Params.link }}"><span class="screen-reader-text">{{ .Title }}</span></a>
+			{{ else }}
+			<a class="absolute-link" rel="bookmark" href="{{ .Permalink }}"><span class="screen-reader-text">{{ .Title }}</span></a>
+			{{ end }}
+		</div><!-- .entry-header -->
 		
 	</article>
 
