--- a/assets/sass/site/primary/_post-formats.scss
+++ b/assets/sass/site/primary/_post-formats.scss
@@ -1,47 +1,66 @@
+.format-standard {
+	.entry-header-text {
+		padding-bottom: 0;
+	}
+}
+
 .format-quote {
-	border:none !important;
+	position: relative;
 
-	.entry-header {
-		margin-bottom:.5em;
-		text-align:center;
+	&:before, &:after {
+		position: absolute;
+		font-family: $serif;
+		line-height: 1;
+		font-weight: 900;
+		font-size: 3em;
+		color: var(--bg-color);
+		display: flex;
+		justify-content: center;
+		align-items: center;
 	}
 
-	.entry-content {
-		font-size:1.5em;
-		max-width:620px;
-		margin:5vw auto !important;
-
-		blockquote {
-			border:none;
-			padding:0;
-			font-size:1em;
-		}
-
-		blockquote p, p {
-			display:inline;
-			margin:1.5em auto;
-			font-weight:bold;
-			line-height:1.4;
-			color:black;
-			font-family:$sans-serif !important;
-			background: lighten($teal,20%);
-		}
-
-		cite, p cite {
-			margin:.5em auto;
-			font-size:1.2em;
-			line-height:1;
-			color:var(--text-color);
-			font-family:$sans-serif;
-			font-weight:200;
-			background:none;
-			display:block;
-			text-align:center;
-		}
+	&:before {
+		content: '“';
+		top: 15px;
+		left: 15px;
 	}
 
-	.entry-footer {
-		background:none;
+	&:after {
+		content: '„';
+		bottom: 15px;
+		right: 15px;
+	}
+
+	.primary-category {
+		display: none;
+	}
+
+	blockquote {
+		border:none;
+		@extend .text-wrap;
+		padding:0;
+		font-size: 2em;
+		font-family: $serif;
+		text-align: center;
+	}
+
+	cite {
+		font-style: normal;
+		font-weight:900;
+		opacity: .65;
+		display: block;
+		margin: 2em auto 0;
+		text-align: center;
+		letter-spacing: 0.08em;
+		font-family: $font__theme;
+		text-transform:uppercase;
+		line-height:1.44;
+
+		&:before {
+			content: '—';
+			margin-right: .4em;
+			display: inline-block;
+		}
 	}
 }
 
@@ -84,53 +103,6 @@
 			}
 		}
 	}
-
-.format-link {
-	padding: 25px;
-	border-radius: 25px;
-	overflow: hidden;
-	position:relative;
-
-	.entry-title {
-		font-size: 1.2em;
-
-		.chameleon-color {
-			display: inline-block;
-			transition: transform .3s ease-out, color 6s linear;
-		}
-	}
-
-	&:hover .entry-title .chameleon-color,
-	&:focus .entry-title .chameleon-color {
-		transform: translate(10px);
-	}
-
-	.primary-category {
-		opacity: 1;
-	}
-
-	.entry-header {
-		margin: 0;
-	}
-
-	.entry-content {
-		font-size: .8em;
-
-		p {
-			margin: 1em 0 0;
-		}
-	}
-
-	.absolute-link {
-		@extend .chameleon-bg;
-		opacity: 0;
-		border-radius: 25px;
-	}
-
-	.absolute-link:hover, .absolute-link:focus {
-		opacity: .2;
-	}
-}
 
 .format-status{
 
