--- a/assets/sass/variables-site/_colors.scss
+++ b/assets/sass/variables-site/_colors.scss
@@ -20,7 +20,7 @@ $color__primary: $purple;
 	--bg-color: #fff;
 	--bg-faint: #eaeaea;
 	--bg-mask: rgba(255,255,255,.7);
-	--text-color: #000;
+	--text-color: #0e0028;
 	--text-color-reverse: #fff;
 }
 
