--- a/layouts/links/single.html
+++ b/layouts/links/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<header class="section-header format-page wrap">
+<header class="archive-header pad format-page wrap">
 	<h1 class="page-title chameleon-color">{{ .Title }}</h1>
 	<div class="section-intro entry-content text-wrap">
 		{{ .Content }}
