--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 {{ partial "site-header.html" . }}
 {{ end }}
 {{ define "main" }}
-<article class="wrap pad {{ if .Params.format }}format-{{ .Params.format }}{{ else }}format-standard{{ end }}">
+<article class="single wrap pad {{ if .Params.format }}format-{{ .Params.format }}{{ else }}format-standard{{ end }}">
 
 	<header class="entry-header">
 		<div class="entry-header-text">
