update status update styles

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,5 +14,8 @@
 			{{ partial "card.html" . }}
 		{{ end }}
 	</div>
+	<center>
+		<a href="/all/page/2" title="More Posts" class="biglink">More Posts</a>
+	</center>
 </section>
 {{ end }}
