--- a/layouts/section/all.html
+++ b/layouts/section/all.html
@@ -1,12 +1,20 @@
 {{ define "main" }}
 {{ $pages := where site.Pages "Type" "post" }}
 {{ $paginator := .Paginate $pages }}
-<header class="section-header format-page wrap">
-	<h1 class="page-title chameleon-color">{{ .Title }}</h1>
+<header class="archive-header wrap format-page pad {{ .Title | urlize }}">
+	<h1 class="page-title chameleon-color">
+		{{ .Title | default .Site.Title }}
+	</h1>
+	{{- if eq .Paginator.PageNumber 1 }}
 	<div class="section-intro entry-content text-wrap">
 		{{ .Content }}
 	</div>
 	<hr/>
+	{{ else }}
+	<div class="section-intro page-count text-wrap" style="text-align: center;">
+		<strong>Page {{ .Paginator.PageNumber }}</strong>
+	</div>
+	{{ end -}}
 </header>
 <section class="section-main">
 	<div class="loop">
