--- a/assets/sass/site/primary/_post-formats.scss
+++ b/assets/sass/site/primary/_post-formats.scss
@@ -80,18 +80,19 @@
 
 .format-status{
 
-	.entry-header {
-		padding:0 20px 0 0;
-		text-align:right;
-		margin-bottom:.2em;
+	&.single .entry-header {
+		@extend .text-wrap;
+
+		.excerpt {
+			display: none;
+		}
 	}
 
 	.entry-content {
 		position:relative;
-		padding:1.3em;
-		border-radius: 1.3em;
-		border:2px solid var(--bg-faint);
-		background:var(--bg-faint);
+		@extend .card;
+		@extend .pad;
+		margin-bottom: 1.666rem;
 
 		p:first-of-type {
 			margin-top:0;
@@ -102,18 +103,9 @@
 		}
 	}
 
-	.status-caption {
-		line-height:1;
-		position: relative;
-		padding:.5em 0 0 4em;
-
-		.author {
-			margin-right:10px;
-		}
+	.entry-footer {
+		text-align: center;
 	}
-
-	.cat-links, .tag-links {display:none;}
-
 }
 
 	#status-speech-bubble{
