fix archive headers for tablet view

--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -822,8 +822,7 @@ MEDIA QUERIES
 	.archive-header.better-humaning,
 	.archive-header.adventravel {
 		border-radius: 25px;
-		margin-top: 4vw;
-		margin-bottom: 6vw;
+		margin: 4vw 4vw 6vw;
 	}
 
 	.interstitial {
