--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -650,6 +650,7 @@
 
 .archive-header {
 	padding:4vw 4vw 0;
+	margin: 0 auto;
 }
 
 	.archive-header.better-humaning,
@@ -662,7 +663,6 @@
 		background-repeat: no-repeat;
 		background-position: center;
 		background-color: black;
-		margin-top: -10px;
 		padding: calc(25px + 4vw);
 		overflow: hidden;
 
@@ -818,11 +818,15 @@ MEDIA QUERIES
 		}
 	}
 
+	.archive-header-wrap {
+		padding: 0 4vw;
+	}
+
 	.archive-header.technolophizing,
 	.archive-header.better-humaning,
 	.archive-header.adventravel {
 		border-radius: 25px;
-		margin: 4vw 4vw 6vw;
+		margin: 4vw auto;
 	}
 
 	.interstitial {
